fix: adds java opens java.utils.concurrent