@@ -15,6 +15,7 @@ else
     $java_bin $java_opts \
       --add-opens java.base/java.lang=ALL-UNNAMED \
       --add-opens java.base/java.util=ALL-UNNAMED \
+      --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED \
       --add-opens java.base/java.net=ALL-UNNAMED \
       -DPROD_MODE=true \
       -Dfile.encoding=UTF-8 \
